@startuml

title __DESIGN-PATTERN's Class Diagram__\n

  namespace builder {
    class builder.CodeBuilder {
    }
  }
  

  namespace builder {
    class builder.Person {
    }
  }
  

  namespace builder {
    class builder.PersonAddressBuilder {
    }
  }
  

  namespace builder {
    class builder.PersonBuilder {
    }
  }
  

  namespace builder {
    class builder.PersonDemo {
    }
  }
  

  namespace builder {
    class builder.PersonOccupancyBuilder {
    }
  }
  

  builder.Person -up-|> builder.PersonDemo
  builder.PersonAddressBuilder -up-|> builder.PersonBuilder
  builder.PersonBuilder o-- builder.Person : person
  builder.PersonOccupancyBuilder -up-|> builder.PersonBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
